--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>drigor</groupId>
 	<artifactId>skype-chatbot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>woodpecker</version>
 	<packaging>jar</packaging>
 
 	<name>skype-chatbot</name>
